# oddjob

./: CONTRIBUTING.md  CONTRIBUTORS.md  README.md  oddjob.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Data/Oddjob/: Worker.hs
