name:                oddjob
version:             0.1.0.0
synopsis:            A collection of worker services.
description:         Please see README.md
homepage:            http://github.com/helium/oddjob#readme
license:             MIT
license-file:        LICENSE
author:              Reid Draper
maintainer:          reid@helium.com
copyright:           2015 Helium
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:     Data.Oddjob.Worker
  build-depends:       base >= 4.7 && < 5
                     , async
                     , clock
                     , containers
                     , microlens
                     , microlens-mtl
                     , mtl
                     , stm
                     , time
                     , transformers
  default-language:    Haskell2010

executable oddjob-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , async
                     , oddjob
                     , containers
  default-language:    Haskell2010

test-suite oddjob-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , oddjob
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/oddjob
